--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   hive: ^2.1.0
   hive_flutter: ^1.1.0
   shared_preferences: ^2.0.13
+  path_provider: any
 
 
   # The following adds the Cupertino Icons font to your application.
