--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   hive_flutter: ^1.1.0
   shared_preferences: ^2.0.13
   path_provider: any
+  fab_circular_menu: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
